# Jarvis

./: .gitignore  agent_controller.py  docker-compose.yml  main.py  memory_manager.py  pyproject.toml  requirements.txt  structured_response.py  tool_registry.py  web_operations.py
