[project]
name = "jarvis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv-python>=0.0.1",
    "langchain>=0.3.27",
    "langchain-google-genai>=2.1.10",
    "langchain-google-vertexai>=2.0.28",
    "langgraph>=0.6.6",
    "python-dotenv>=1.1.1",
]
